--- a/modules/projects/client/views/project-partials/project.enforcements.html
+++ b/modules/projects/client/views/project-partials/project.enforcements.html
@@ -9,9 +9,10 @@
         <div class="panel panel-default accordion">
             <div class="panel-heading" role="tab" id="ir1">
                 <a class="clearfix" role="button" data-toggle="collapse" href="#ir1Collapse" aria-expanded="true" aria-controls="ir1Collapse">
+                    <span class="glyphicon glyphicon-plus pull-left"></span>
+                    <span class="glyphicon glyphicon-minus pull-left"></span>
                     <h2 class="pull-left">Inspection Report 1</h2>
-                    <span class="glyphicon glyphicon-chevron-down pull-right"></span>
-                    <span class="glyphicon glyphicon-chevron-up pull-right"></span>
+                    <span class="pull-right">January 7, 2016</span>
                 </a>
             </div>
             <div id="ir1Collapse" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="ir1Collapse">
@@ -93,9 +94,10 @@
         <div class="panel panel-default accordion">
             <div class="panel-heading" role="tab" id="ir2">
                 <a class="clearfix" role="button" data-toggle="collapse" href="#ir2Collapse" aria-expanded="true" aria-controls="ir2Collapse">
+                    <span class="glyphicon glyphicon-plus pull-left"></span>
+                    <span class="glyphicon glyphicon-minus pull-left"></span>
                     <h2 class="pull-left">Inspection Report 2</h2>
-                    <span class="glyphicon glyphicon-chevron-down pull-right"></span>
-                    <span class="glyphicon glyphicon-chevron-up pull-right"></span>
+                    <span class="pull-right">March 15, 2016</span>
                 </a>
             </div>
             <div id="ir2Collapse" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="ir2Collapse">
