Totally changed layout of document browsing, now is document browsing via artifact.  Linking is added for documents which are artifacts.  Artifact Chooser updates.  Uploaded documents upload into the current phase, and old documents are just listed in the main browser view.

--- a/modules/documents/client/views/documents.html
+++ b/modules/documents/client/views/documents.html
@@ -16,12 +16,12 @@
 			x-project="project">
 		</tmpl-documents-browser>
 
-		<tmpl-documents-approvals
+		<!-- <tmpl-documents-approvals
 			class="anchor-section"
 			id="anchor-document-approvals"
 			x-approvals="true"
 			x-project="project">
-		</tmpl-documents-approvals>
+		</tmpl-documents-approvals> -->
 	</div>
 	
 </div>
