Revert "Totally changed layout of document browsing, now is document browsing via artifact.  Linking is added for documents which are artifacts.  Artifact Chooser updates.  Uploaded documents upload into the current phase, and old documents are just listed in the main browser view."
This reverts commit 2e8be0cbfadc86af42449f9c5d3b932a31f2186a.

--- a/modules/artifacts/client/views/artifact-chooser.html
+++ b/modules/artifacts/client/views/artifact-chooser.html
@@ -3,22 +3,10 @@
 </div>
 <div class="modal-body">
 	<ul class="list-group">
-		<li ng-repeat="art in s.artifacts"
-            ng-if="art.typeCode === 'documents'"
-            ng-click="s.selected = art._id"
-            class="list-group-item clickable"
-            ng-class="{'active':(s.selected === art._id)}">
-        <span ng-if="art.published" class="label label-success pull-right">published</span>
-        {{ art.document.internalOriginalName }} ( {{ art.version }} )
-        </li>
-        <li ng-repeat="art in s.artifacts"
-            ng-if="art.typeCode !== 'documents'"
-            ng-click="s.selected = art._id"
-            class="list-group-item clickable"
-            ng-class="{'active':(s.selected === art._id)}">
-        <span ng-if="art.published" class="label label-success pull-right">published</span>
-        {{ art.name }} ( {{ art.version }} )
-        </li>
+		<li ng-repeat="art in s.artifacts" ng-click="s.selected = art._id" class="list-group-item clickable" ng-class="{'active':(s.selected === art._id)}">
+		<span ng-if="art.published" class="label label-success pull-right">published</span>
+		{{ art.name }} ( {{ art.version }} )
+		</li>
 	</ul>
 </div>
 <div class="modal-footer">
