Continued UI Re-factoring & Cleanup
- Updated markup for error views (403.client.view.html, smerr.view.html)

--- a/modules/conditions/client/views/condition-list.html
+++ b/modules/conditions/client/views/condition-list.html
@@ -24,7 +24,7 @@
 					<td data-title="'Stages'"   filter="{'stages':'text'}"  sortable="'stages'" >{{o.stageString}}</td>
 					<td data-title="'Pillars'"  filter="{'pillars':'text'}" sortable="'pillars'"  >{{o.pillarString}}</td>
 					<td class="actions-col action-x1" header-class="'actions-col action-x1'">
-						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.condition.edit({conditionId:o._id})">
+						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-sm" ui-sref="admin.condition.edit({conditionId:o._id})">
 							<span class="glyphicon glyphicon-pencil"></span>
 						</a>
 					</td>
