--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -2076,9 +2076,9 @@ $header-height: 6rem;
 		padding-top: 0;
 		padding-bottom: 0;
 		text-align: center;
-		vertical-align: middle;
 		
 		.btn {
+			margin-top: 0.32rem;
 			padding-left: 0.8rem;
 			padding-right: 0.8rem;
 		}
