Reverting artifacts view, force uploader to attach to a specific artifact first.  Workflow issue for upload->link/attach documents still needs to be addressed

--- a/modules/documents/client/views/partials/document-browser.html
+++ b/modules/documents/client/views/partials/document-browser.html
@@ -161,7 +161,7 @@
 				</ul>
 			</div>
 			
-			<div class='col-sm-4 col-no-padding vertical-scroll hidden' ng-class="{'bg-muted': !filterSummary}" >
+			<div class='col-sm-4 col-no-padding vertical-scroll' ng-class="{'bg-muted': !filterSummary}" >
 				<div class="row" ng-show="filterSummary">
 					<div class="col-sm-10 doc-detail-col">
 						<ul class="small list-unstyled list-documents list-indent-left" >
