Continued UI Refactor
- Updated branding image
- Fixed 403.client.view.html spelling/grammar mistakes
- Fixed a small issue that I introduced in the markup for the existing document browser interface

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -1885,8 +1885,8 @@ $header-height: 6rem;
 		padding: 0 1rem;
 		
 		img {
-			margin-top: 0.8rem;
-			height: 4rem;
+			margin-top: 0.6rem;
+			height: 45px;
 		}
 	}
 	
