--- a/modules/core/client/views/403.client.view.html
+++ b/modules/core/client/views/403.client.view.html
@@ -1,10 +1,8 @@
 <div class="error-view">
 	<div class="view-title-container">
-		<h1>Permission Error</h1>
+		<h1>Permission Denied</h1>
 	</div>
 	<div class="view-body-container">
-		<p>You have tried to access part of the system not available to your account.</p>
-		<p>If you feel you have recieved this in error, please contact your system administrator.</p>
-		<p>To return to the prior screen, click the back button on your browser.</p>			
+		<p>You don not have the correct permissions to access this page.</p>	
 	</div>
 </div>
