--- a/modules/core/client/views/smerr.view.html
+++ b/modules/core/client/views/smerr.view.html
@@ -7,6 +7,7 @@
         <!-- TODO: Siteminder! fill this out with different messages/information according to the error condition -->
         <p ng-show="userType === 'business'">business bceid user is not known to ESM</p>
         <p ng-show="userType === 'basic'">bceid user is not known to ESM</p>
+        <p ng-show="userType === 'individual'">bceid (individual) user is not known to ESM</p>
         <p ng-show="userType === 'internal'">idir user is not known to ESM</p>
         <p ng-show="userType === 'unknown'">no siteminder headers provided...</p>
     </div>
