--- a/modules/documents/client/views/partials/document-browser.html
+++ b/modules/documents/client/views/partials/document-browser.html
@@ -130,37 +130,29 @@
 					ng-if="(docBrowser.authentication.user) && environment === 'MEM'"><span class="glyphicon glyphicon-upload"></span>Upload</a>	
 			</div>
 		</div>
-		<div class="panel-body">
-			
-			<div class='col-sm-4 col-no-padding vertical-scroll col-border-right'>
-				<ul class="small list-unstyled list-documents">
-					<li
+		<div class="file-browser clearfix">
+			<div class="col-sm-6 col-md-4">
+				<ul class="file-browser-list">
+					<li class="row-folder clickable row-folder-depth-{{ row.depth }}" ng-class="{'active btn-primary': docBrowser.filterDocsSelected(row)}"
 						ng-click="docBrowser.filterList(row)"
 						ng-hide="row.label === 'Not Specified'"
-						class="row-folder clickable row-folder-depth-{{ row.depth }}"
-						ng-repeat="row in docBrowser.docTypes"
-						ng-class="{'active btn-primary': docBrowser.filterDocsSelected(row)}">
-						<span class="glyphicon glyphicon-play arrow"></span>
+						ng-repeat="row in docBrowser.docTypes">
+						<span class="glyphicon glyphicon-folder-close"></span>
 						{{ row.label }}
-						
 					<li>
 				</ul>
 			</div>
-			
-			<div class='col-sm-4 col-no-padding vertical-scroll col-border-right'>
-				<ul class="small list-unstyled list-documents list-indent-left">
-					<li
-						class="row-document clickable"
+			<div class="col-sm-6 col-md-4">
+				<ul class="file-browser-list">
+					<li class="row-document clickable" ng-class="{'active btn-primary': filterSummary._id === doc._id}"
 						ng-click="docBrowser.filterSummary(doc)"
-						ng-repeat="doc in docBrowser.documentFiles | filter:filterLinage:true"
-						ng-class="{'active btn-primary': filterSummary._id === doc._id}">
-						<span class="glyphicon glyphicon-play arrow"></span>
-						<span class="glyphicon glyphicon-file"></span>&nbsp;{{ doc.internalOriginalName | removeExtension }}
+						ng-repeat="doc in docBrowser.documentFiles | filter:filterLinage:true">
+						<span class="glyphicon glyphicon-file"></span>
+						{{ doc.internalOriginalName | removeExtension }}
 					</li>
 				</ul>
 			</div>
-			
-			<div class='col-sm-4 col-no-padding vertical-scroll' ng-class="{'bg-muted': !filterSummary}" >
+			<div class='col-sm-12 col-md-4' ng-class="{'bg-muted': !filterSummary}" >
 				<div class="row" ng-show="filterSummary">
 					<div class="col-sm-10 doc-detail-col">
 						<ul class="small list-unstyled list-documents list-indent-left" >
