--- a/modules/artifacts/client/views/artifact-view.html
+++ b/modules/artifacts/client/views/artifact-view.html
@@ -11,9 +11,9 @@
 
 <tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
 
-<div ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
+<div ng-if="authentication.user" ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
 
-<div ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
+<div ng-if="authentication.user" ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
 
 <div class="text-right form-group">
 	<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
