Hiding the documents in review (temp) as per request

--- a/modules/documents/client/views/documents.html
+++ b/modules/documents/client/views/documents.html
@@ -17,7 +17,7 @@
 		</tmpl-documents-browser>
 
 		<tmpl-documents-approvals
-			class="anchor-section"
+			class="anchor-section hidden"
 			id="anchor-document-approvals"
 			x-approvals="true"
 			x-project="project">
